Add multiple new email templates for various pharmacy-related notifications
- Introduced new email templates for account actions, including account approval, rejection, and registration for pharmacy owners.
- Added templates for payment requests, prescription notifications, and user invitations to enhance communication with users.
- Ensured all templates are responsive and visually consistent with existing designs, improving user experience across devices.
- Updated existing templates to include dynamic content for personalized messaging.

--- a/src/templates/pharmacy-account-approved.ejs
+++ b/src/templates/pharmacy-account-approved.ejs
@@ -146,30 +146,30 @@
       <style type="text/css">
         @media (max-width: 480px) {
     
-          .t110,
-          .t113,
+          .t104,
+          .t107,
           .t24,
-          .t89 {
+          .t83 {
             text-align: center !important
           }
     
-          .t123,
-          .t128 {
+          .t117,
+          .t122 {
             mso-line-height-alt: 0px !important;
             line-height: 0 !important;
             display: none !important
           }
     
-          .t110,
-          .t111,
+          .t104,
+          .t105,
           .t24,
           .t25,
-          .t89,
-          .t90 {
+          .t83,
+          .t84 {
             display: block !important
           }
     
-          .t124 {
+          .t118 {
             padding-left: 24px !important;
             padding-top: 43px !important;
             padding-right: 24px !important;
@@ -201,50 +201,50 @@
             max-width: 430px !important
           }
     
-          .t75 {
+          .t69 {
             mso-line-height-alt: 26px !important;
             line-height: 26px !important
           }
     
-          .t80,
-          .t98 {
+          .t74,
+          .t92 {
             mso-line-height-alt: 4px !important;
             line-height: 4px !important;
             display: block !important
           }
     
-          .t101,
-          .t105,
-          .t109,
-          .t84,
-          .t88 {
+          .t103,
+          .t78,
+          .t82,
+          .t95,
+          .t99 {
             vertical-align: middle !important;
             display: inline-block !important;
             width: 100% !important
           }
     
-          .t76 {
+          .t70 {
             padding-left: 30px !important;
             padding-right: 30px !important
           }
     
-          .t84 {
+          .t78 {
             max-width: 143px !important
           }
     
-          .t88 {
+          .t82 {
             max-width: 107px !important
           }
     
-          .t101 {
+          .t95 {
             max-width: 363px !important
           }
     
-          .t105 {
+          .t99 {
             max-width: 94px !important
           }
     
-          .t109 {
+          .t103 {
             max-width: 140px !important
           }
     
@@ -268,11 +268,11 @@
     <![endif]-->
     </head>
     
-    <body id=body class=t131 style="min-width:100%;Margin:0px;padding:0px;background-color:#F9F9F9;">
-      <div class=t130 style="background-color:#F9F9F9;">
+    <body id=body class=t125 style="min-width:100%;Margin:0px;padding:0px;background-color:#F9F9F9;">
+      <div class=t124 style="background-color:#F9F9F9;">
         <table role=presentation width=100% cellpadding=0 cellspacing=0 border=0 align=center>
           <tr>
-            <td class=t129
+            <td class=t123
               style="font-size:0;line-height:0;mso-line-height-rule:exactly;background-color:#F9F9F9;background-image:none;background-repeat:repeat;background-size:auto;background-position:center top;"
               valign=top align=center>
               <!--[if mso]>
@@ -283,20 +283,20 @@
               <table role=presentation width=100% cellpadding=0 cellspacing=0 border=0 align=center id=innerTable>
                 <tr>
                   <td>
-                    <div class=t123
+                    <div class=t117
                       style="mso-line-height-rule:exactly;mso-line-height-alt:30px;line-height:30px;font-size:1px;display:block;">
                       &nbsp;&nbsp;</div>
                   </td>
                 </tr>
                 <tr>
                   <td align=center>
-                    <table class=t127 role=presentation cellpadding=0 cellspacing=0
+                    <table class=t121 role=presentation cellpadding=0 cellspacing=0
                       style="Margin-left:auto;Margin-right:auto;">
                       <tr>
-                        <td width=600 class=t126 style="width:600px;">
-                          <table class=t125 role=presentation cellpadding=0 cellspacing=0 width=100% style="width:100%;">
+                        <td width=600 class=t120 style="width:600px;">
+                          <table class=t119 role=presentation cellpadding=0 cellspacing=0 width=100% style="width:100%;">
                             <tr>
-                              <td class=t124
+                              <td class=t118
                                 style="overflow:hidden;background-color:#FFFFFF;padding:32px 30px 32px 30px;border-radius:20px 20px 20px 20px;">
                                 <table role=presentation width=100% cellpadding=0 cellspacing=0
                                   style="width:100% !important;">
@@ -469,7 +469,7 @@
                                                 <td class=t34>
                                                   <h1 class=t32
                                                     style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:28px;font-weight:600;font-style:normal;font-size:18px;text-decoration:none;text-transform:none;letter-spacing:-1.2px;direction:ltr;color:#222222;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                    Pharmacy Registration Received <br> Verification in Progress</h1>
+                                                    Pharmacy Registration Approved <br> Welcome to Sendscript</h1>
                                                 </td>
                                               </tr>
                                             </table>
@@ -497,7 +497,7 @@
                                                 <td class=t40>
                                                   <p class=t38
                                                     style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                    Dear <%= pharmacy_name %>,</p>
+                                                Dear <%= pharmacy_owner_name %>,</p>
                                                 </td>
                                               </tr>
                                             </table>
@@ -525,7 +525,8 @@
                                                 <td class=t46>
                                                   <p class=t44
                                                     style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                    Thank you for registering your pharmacy with Sendscript.</p>
+                                                    We&rsquo;re pleased to inform you that your pharmacy registration has been
+                                                    successfully approved.</p>
                                                 </td>
                                               </tr>
                                             </table>
@@ -553,8 +554,10 @@
                                                 <td class=t52>
                                                   <p class=t50
                                                     style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                    Your pharmacy registration has been successfully received and is currently
-                                                    under review by our team.</p>
+                                                    Your pharmacy is now officially registered on the <span class=t16
+                                                      style="margin:0;Margin:0;font-weight:600;mso-line-height-rule:exactly;">SendScript</span>
+                                                    platform, and you can begin managing pharmacy seamlessly.
+                                                  </p>
                                                 </td>
                                               </tr>
                                             </table>
@@ -582,7 +585,8 @@
                                                 <td class=t58>
                                                   <p class=t56
                                                     style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                    We will notify you once the verification process is complete.</p>
+                                                    Thank you for choosing Sendscript. We&rsquo;re excited to support you on
+                                                    your journey toward smarter and connected healthcare.</p>
                                                 </td>
                                               </tr>
                                             </table>
@@ -603,15 +607,14 @@
                                       <table class=t67 role=presentation cellpadding=0 cellspacing=0
                                         style="Margin-left:auto;Margin-right:auto;">
                                         <tr>
-                                          <td width=467 class=t66 style="width:467px;">
+                                          <td width=464 class=t66 style="width:464px;">
                                             <table class=t65 role=presentation cellpadding=0 cellspacing=0 width=100%
                                               style="width:100%;">
                                               <tr>
                                                 <td class=t64>
                                                   <p class=t62
                                                     style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                    Thank you for your patience.
-                                                  </p>
+                                                    Warm Regards, <br />The Sendscript Team <br> support@sendscript.com </p>
                                                 </td>
                                               </tr>
                                             </table>
@@ -622,34 +625,7 @@
                                   </tr>
                                   <tr>
                                     <td>
-                                      <div class=t69
-                                        style="mso-line-height-rule:exactly;mso-line-height-alt:17px;line-height:17px;font-size:1px;display:block;">
-                                        &nbsp;&nbsp;</div>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td align=center>
-                                      <table class=t73 role=presentation cellpadding=0 cellspacing=0
-                                        style="Margin-left:auto;Margin-right:auto;">
-                                        <tr>
-                                          <td width=464 class=t72 style="width:464px;">
-                                            <table class=t71 role=presentation cellpadding=0 cellspacing=0 width=100%
-                                              style="width:100%;">
-                                              <tr>
-                                                <td class=t70>
-                                                  <p class=t68
-                                                    style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                    Regards, <br />The Sendscript Team <br> support@sendscript.com </p>                                                </td>
-                                              </tr>
-                                            </table>
-                                          </td>
-                                        </tr>
-                                      </table>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td>
-                                      <div class=t118
+                                      <div class=t112
                                         style="mso-line-height-rule:exactly;mso-line-height-alt:15px;line-height:15px;font-size:1px;display:block;">
                                         &nbsp;&nbsp;</div>
                                     </td>
@@ -665,7 +641,7 @@
                 </tr>
                 <tr>
                   <td>
-                    <div class=t128
+                    <div class=t122
                       style="mso-line-height-rule:exactly;mso-line-height-alt:30px;line-height:30px;font-size:1px;display:block;">
                       &nbsp;&nbsp;</div>
                   </td>
