--- a/src/templates/account-blocked-by-super-admin.ejs
+++ b/src/templates/account-blocked-by-super-admin.ejs
@@ -557,7 +557,7 @@
                                                 style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:12px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                 <span class=t16
                                                   style="margin:0;Margin:0;font-weight:600;mso-line-height-rule:exactly;">Reason:</span>
-                                                Repeated policy violations
+                                                  <%= reason %>
                                               </p>
                                             </td>
                                           </tr>
