--- a/src/backend-templates/email/prescription-with-sign.ejs
+++ b/src/backend-templates/email/prescription-with-sign.ejs
@@ -383,10 +383,12 @@
                         </span></p>
                     <p><strong>Address:</strong>
                         <span>
-                            <%= patient_details?.patient_address_line_1 %>,
-                            <%= patient_details?.patient_address_line_2 %>,
-                            <%= patient_details?.patient_city %>,
-                            <%= patient_details?.patient_postal_code %>,
+                            <%= [
+                                patient_details?.patient_address_line_1,
+                                patient_details?.patient_address_line_2,
+                                patient_details?.patient_city,
+                                patient_details?.patient_postal_code
+                            ].filter(Boolean).join(', ') %>
                             <br>
                             <%= patient_details?.patient_country %>
                         </span>
@@ -484,7 +486,8 @@
                 <p><strong>E-signature: <%= prescription.doctor_signature %></strong>
                 </p>
                 <p><strong>Date and Time of signature:</strong>
-                    <%= prescription_created_at %>
+                    <%= new Date(prescription_created_at).toLocaleString('en-GB', { day: '2-digit' , month: '2-digit' ,
+                        year: 'numeric' , hour: '2-digit' , minute: '2-digit' , hour12: true }) %>
                 </p>
                 <p>To verify (or) dispense the prescription visit: www.sendscript.com/dispense</p>
             </div>
