Update email templates and scripts for patient registration
- Modified sample data in scripts to reflect new patient registration details, including updated recipient name and notice content.
- Enhanced email template to dynamically include recipient name and reference number, improving personalization.
- Updated consent form references to registration form for clarity and consistency across communications.

--- a/src/backend-templates/email/leh-email-template.ejs
+++ b/src/backend-templates/email/leh-email-template.ejs
@@ -472,7 +472,7 @@
                                                 Hi <span class=t17
                                                   style="margin:0;Margin:0;mso-line-height-rule:exactly;"><span
                                                     class=t16
-                                                    style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;"><%= recipient_name %></span></span><span class=t18
+                                                    style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;"> <%= title %> <%= first_name %> <%= sur_name %> </span></span><span class=t18
                                                   style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;">,</span>
                                               </p>
                                             </td>
@@ -568,7 +568,7 @@
                                                 style="margin:0;Margin:0;font-family:DM Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:23px;font-weight:400;font-style:normal;font-size:14px;text-decoration:none;text-transform:none;letter-spacing:-0.6px;direction:ltr;color:#444444;text-align:left;mso-line-height-rule:exactly;mso-text-raise:3px;">
                                                 <span
                                                 class=t16
-                                                style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;"><%= reference_number %></span>
+                                                style="margin:0;Margin:0;font-weight:700;mso-line-height-rule:exactly;"><%= patient_code %></span>
                                               </p>
                                             </td>
                                           </tr>
@@ -817,7 +817,7 @@
                                                     <table class=t86 role=presentation cellpadding=0 cellspacing=0
                                                       style="Margin-left:auto;Margin-right:auto;">
                                                       <tr>
-                                                        <td width=540 class=t85 style="width:700px;">
+                                                        <td width=540 class=t85 style="width:590px;">
                                                           <table class=t84 role=presentation cellpadding=0 cellspacing=0
                                                             width=100% style="width:100%;">
                                                             <tr>
@@ -828,7 +828,7 @@
                                                                       cellspacing=0 align=center valign=top>
                                                                       <tr class=t79>
                                                                         <td></td>
-                                                                        <td class=t78 width=400 valign=top>
+                                                                        <td class=t78 width=265 valign=top>
                                                                           <div class=t75
                                                                             style="mso-line-height-rule:exactly;mso-line-height-alt:18px;line-height:18px;font-size:1px;display:block;">
                                                                             &nbsp;&nbsp;</div>
@@ -838,7 +838,7 @@
                                                                             <tr>
                                                                               <td class=t76
                                                                                 style="overflow:hidden;background-color:#93763C;text-align:center;line-height:24px;mso-line-height-rule:exactly;mso-text-raise:2px;padding:8px 10px 8px 10px;border-radius:9px 9px 9px 9px;">
-                                                                                <a class=t74 href="<%= consent_form_url %>" target="_blank"
+                                                                                <a class=t74 href="<%= url %>" target="_blank"
                                                                                   style="display:block;margin:0;Margin:0;font-family:DM Sans,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:24px;font-weight:700;font-style:normal;font-size:16px;text-decoration:none;direction:ltr;color:#FFFFFF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">Complete
                                                                                   the Registration Form</a></td>
                                                                             </tr>
@@ -1131,9 +1131,9 @@
                                                                             <tr>
                                                                               <td class=t144
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                <a href="https://sendscript.com/privacy-policy" target="_blank" class=t143
+                                                                                <p class=t143
                                                                                   style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  Privacy Policy</a>
+                                                                                  Privacy Policy</p>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
@@ -1145,9 +1145,9 @@
                                                                             <tr>
                                                                               <td class=t148
                                                                                 style="overflow:hidden;border-radius:8px 8px 8px 8px;">
-                                                                                <a href="https://sendscript.com/terms-and-conditions" target="_blank" class=t147
+                                                                                <p class=t147
                                                                                   style="margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:18px;font-weight:500;font-style:normal;font-size:10px;text-decoration:none;text-transform:none;direction:ltr;color:#777777;text-align:center;mso-line-height-rule:exactly;mso-text-raise:2px;">
-                                                                                  Terms and Conditions</a>
+                                                                                  Terms and Conditions</p>
                                                                               </td>
                                                                             </tr>
                                                                           </table>
