Update invoice email templates to enhance clarity and remove redundant elements
- Revised the invoice email templates to clarify the message regarding invoice attachment, stating that the invoice is included as a PDF.
- Removed unnecessary HTML elements to streamline the layout and improve responsiveness.
- Ensured consistency in messaging across both backend and frontend templates.

--- a/src/templates/invoice-from-pharmacy.ejs
+++ b/src/templates/invoice-from-pharmacy.ejs
@@ -572,9 +572,7 @@
                                                 prescribed medicines
                                                 from <%= pharmacy_name %> has
                                                 been successfully
-                                                confirmed. You can
-                                                download your invoice
-                                                using the link below:
+                                                confirmed.<br/> We&rsquo;re attached your invoice 1912 to this email as a PDF file.
                                               </p>
                                             </td>
                                           </tr>
@@ -582,43 +580,6 @@
                                       </td>
                                     </tr>
                                   </table>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td>
-                                  <div class=t69
-                                    style="mso-line-height-rule:exactly;mso-line-height-alt:15px;line-height:15px;font-size:1px;display:block;">
-                                    &nbsp;&nbsp;</div>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td align=center>
-                                  <table class=t73 role=presentation cellpadding=0 cellspacing=0
-                                    style="Margin-left:auto;Margin-right:auto;">
-                                    <tr>
-                                      <td width=185 class=t72 style="width:185px;">
-                                        <table class=t71 role=presentation cellpadding=0 cellspacing=0 width=100%
-                                          style="width:100%;">
-                                          <tr>
-                                            <td class=t70
-                                              style="overflow:hidden;background-color:#1B3F6D;text-align:center;line-height:24px;mso-line-height-rule:exactly;mso-text-raise:3px;padding:8px 8px 8px 8px;border-radius:27px 27px 27px 27px;">
-                                              <a href="<%= invoice_url %>" target="_blank" class=t68
-                                                style="display:block;margin:0;Margin:0;font-family:Poppins,BlinkMacSystemFont,Segoe UI,Helvetica Neue,Arial,sans-serif;line-height:24px;font-weight:600;font-style:normal;font-size:15px;text-decoration:none;direction:ltr;color:#E3F0FF;text-align:center;mso-line-height-rule:exactly;mso-text-raise:3px;">
-                                                Download Invoice
-                                              </a>
-                                            </td>
-                                          </tr>
-                                        </table>
-                                      </td>
-                                    </tr>
-                                  </table>
-                                </td>
-                              </tr>
-                              <tr>
-                                <td>
-                                  <div class=t75
-                                    style="mso-line-height-rule:exactly;mso-line-height-alt:15px;line-height:15px;font-size:1px;display:block;">
-                                    &nbsp;&nbsp;</div>
                                 </td>
                               </tr>
                               <tr>
